Search from Any page
Moved search form to navbar so users can search from any page.
considering moving it elsewhere but yeah...

--- a/style.css
+++ b/style.css
@@ -55,6 +55,11 @@ textarea{
 		list-style-type: none;
 		padding: 10px;
 	}
+	
+	#navbar form{
+		margin-top: 10px;
+		margin-bottom: 0;
+	}
 
 #middleContainer{
 	margin: auto;
