Added odering, paypal, layout improvements
You can now place orders and then pay using payal (sometimes wont work
until you refresh the page). Made product and order tables look better,
general bug fix stuff.

--- a/style.css
+++ b/style.css
@@ -98,20 +98,23 @@ textarea{
 		clear:both;
 	}
 	
-	#myProducts{
+	#tableList{
 		width: 100%;
 		border: 1px solid black;
+    border-collapse: collapse;
 	}
 	
-		#myProducts a{
+		#tableList a{
 			color: black;
 		}
 		
-		#myProducts th{
+		#tableList th{
 			text-align:left;
 			font-size: 1.2em;
 			padding-bottom: 10px;
 		}
+		
+		#tableList tr:nth-child(odd) {background: #FFF}
 	
 	#newPro{
 		margin: auto;
