--- a/style.css
+++ b/style.css
@@ -14,30 +14,45 @@ textarea{
 	font-size: 3em;
 }
 
-	#loginInfo{
-		position: fixed;
-		top: 5px;
-		right: 5px;
-		font-size: 0.4em;
-	}
-
 	#logo{
+		width: 50px;
 		position: relative;
-		top: 10px;
-		left: 10px;
-		padding-bottom: 10px;
+		top: 15px;
+		padding: 0 10px 10px 10px;
 	}
 	
 #navbar{
+	text-align:center;
 	width: 100%;
-	background: #7ac943;
-	text-align: center;
+	border-bottom: 2px solid black;
+	padding-bottom: 5px;
 	font-size: 1.8em;
+	background-color: #7ac943;
 }
+
+	#nav2{
+		width:  calc(100% - 10px);
+		padding: 0 5px 0 5px;
+		text-align:left;
+	}
+	
+		#loginInfo{
+			float: right;
+			font-size: 0.4em;
+		}
+		
+		#search{
+			
+		}
+	
+	.inline{
+		display: inline;
+	}
 	
 	#navbar ul{
-		margin: 0;
+		margin: 0 0 0 100px;
 		padding: 15px 0 15px 0;
+		display: inline;
 	}
 	
 	#navbar a{
@@ -66,14 +81,16 @@ textarea{
 	background: #d0d0d0;
 	width: 1100px;
 	padding: 10px;
+	margin-top: 10px;
 }
 
 	.gridItem{
 		position: relative;
-		width: 218px;
-		height: 218px;
+		width: 216px;
+		height: 216px;
 		background: black;
-		border: 1px dashed grey;
+		border: 1px solid black;
+		margin: 1px;
 		float:left;
 		color: white;
 	}
