--- a/style.css
+++ b/style.css
@@ -85,7 +85,55 @@ textarea{
 	width: 1100px;
 	padding: 10px;
 	margin-top: 10px;
+	position: relative;
 }
+
+	#banner{
+		width: 100%;
+		height: 400px;
+	}
+	
+		#banner a{
+			color:black;
+			text-decoration: none;
+		}
+	
+		#banner img{
+			width: 520px;
+			height: 300px;
+		}
+	
+		#banner #main{
+			position: absolute;
+			right: 260px;
+			z-index: 1;
+		}
+		
+		#banner #right{
+			
+			float:right;
+			
+			-webkit-filter: blur(10px);
+			filter: blur(5px);
+			// Browser Specific
+			-webkit-filter: blur(10px);
+			-moz-filter: blur(10px);
+			-o-filter: blur(10px);
+			-ms-filter: blur(10px);
+		}
+		
+		#banner #left{
+
+			float:left;
+			
+			-webkit-filter: blur(10px);
+			filter: blur(10px);
+			// Browser Specific
+			-webkit-filter: blur(10px);
+			-moz-filter: blur(10px);
+			-o-filter: blur(10px);
+			-ms-filter: blur(10px);
+		}
 
 	.gridItem{
 		position: relative;
