--- a/style.css
+++ b/style.css
@@ -91,11 +91,14 @@ textarea{
 	#banner{
 		width: 100%;
 		height: 400px;
+		position: relative;
 	}
 	
 		#banner a{
 			color:black;
 			text-decoration: none;
+			font-size: 1.5em;
+			font-weight: bold;
 		}
 	
 		#banner img{
@@ -106,26 +109,18 @@ textarea{
 		#banner #main{
 			position: absolute;
 			right: 260px;
-			z-index: 1;
+			z-index: 5;
 		}
 		
 		#banner #right{
-			
 			float:right;
-			
-			-webkit-filter: blur(10px);
-			filter: blur(5px);
-			// Browser Specific
-			-webkit-filter: blur(10px);
-			-moz-filter: blur(10px);
-			-o-filter: blur(10px);
-			-ms-filter: blur(10px);
+		}
+				
+		#banner #left{
+			float:left;
 		}
 		
-		#banner #left{
-
-			float:left;
-			
+		.blur{
 			-webkit-filter: blur(10px);
 			filter: blur(10px);
 			// Browser Specific
@@ -152,6 +147,7 @@ textarea{
 	}
 	
 	.text{
+		z-index: 5;
 		text-align:center;
 		width: 100%;
 		position: absolute;
@@ -161,6 +157,10 @@ textarea{
 		filter: alpha(opacity=60); /* For IE8 and earlier */
 		background: black;
 		color: white;
+	}
+	
+	#middleContainer a{
+		text-decoration: none;
 	}
 	
 	.clear{
