--- a/style.css
+++ b/style.css
@@ -109,7 +109,7 @@ textarea{
 	
 		#banner img{
 			width: 520px;
-			height: 300px;
+			/*height: 300px;*/
 		}
 	
 		#banner #main{
@@ -140,7 +140,7 @@ textarea{
 		position: relative;
 		width: 216px;
 		height: 216px;
-		background: black;
+		background: rgba(0,0,0,0.2);
 		border: 1px solid black;
 		margin: 1px;
 		float:left;
@@ -149,7 +149,7 @@ textarea{
 	
 	.gridItem img{
 		width: 100%;
-		height: 100%;
+		/*height: 100%;*/
 	}
 	
 	.text{
@@ -221,12 +221,13 @@ textarea{
 			height: 210px;
 			float:left;
 			position: relative;
+			background: rgba(0,0,0,0.2);
 			margin: 2px;
 		}
 		
 			.third img{
 				width: 100%;
-				height: 100%;
+				/*height: 100%;*/
 			}
 	
 #cart{
