--- a/style.css
+++ b/style.css
@@ -5,7 +5,6 @@ html{
 body{
 	margin: 0;
 	font-family: 'Roboto', sans-serif;
-	
 }
 
 textarea{
@@ -53,15 +52,21 @@ textarea{
 			text-align:center;
 			font-size: 0.5em;
 			float:left;
+			width:275px;
 		}
 		
 		#search{
 			float:right;
 			margin-bottom: 0;
+			width:275px;
+		}
+		
+		#smaller{
+			width: 550px;
+			margin: auto;
 		}
 		
 		#amount{
-			width:auto;
 			background: #eee;
 		}
 
