Tags box bigger
also removed mia.php and .htaccess

--- a/style.css
+++ b/style.css
@@ -199,6 +199,10 @@ textarea{
 		padding: 3px 0 3px 0;
 	}
 	
+	#catcat{
+		width: 600px;
+	}
+	
 	#middleContainer a{
 		-moz-text-decoration-color: black;
 		text-decoration-color: black;
